--- a/src/app/styles/app.scss
+++ b/src/app/styles/app.scss
@@ -41,10 +41,6 @@ my-app, overslide {
 
   &.loaded {
     opacity:1;
-    -moz-transition: opacity 1000ms linear;
-    -ms-transition: opacity 1000ms linear;
-    -o-transition: opacity 1000ms linear;
-    transition: opacity 1000ms linear;
   }
 
 }
@@ -86,10 +82,6 @@ my-app, overslide {
 
     &.transitioning {
       opacity:1;
-      -moz-transition: opacity 1000ms linear;
-      -ms-transition: opacity 1000ms linear;
-      -o-transition: opacity 1000ms linear;
-      transition: opacity 1000ms linear;
     }
   }
 }
@@ -208,6 +200,7 @@ my-app, overslide {
 
   #new {
     ul {
+      display:block;
       li {
         opacity:1;
       }
@@ -216,9 +209,5 @@ my-app, overslide {
 
   #tag {
     margin:20px 0;
-  }
-
-  #insta {
-    display:none;
   }
 }
